<resources>
    <string name="app_name">RandomRestaurant</string>
    <string name="front_page_text">Listen, you want eat good?\n Alright, then order food from us. </string>
    <string name="title_activity_main_nav_drawer">MainNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_detail">foodDetailActivity</string>
    <string name="menu">Menu</string>
    <string name="call_us">Call Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="entertainment">Entertainment</string>
    <string name="music">Music</string>
    <string name="phone_number">Phone Number</string>
    <string name="_714_824_2333">714-824-2333</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
</resources>
