<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_callus"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/call_us" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

    <item android:title="@string/entertainment">
        <menu>
            <item
                android:id="@+id/nav_music"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/music" />

        </menu>
    </item>

</menu>
